# pulumi-ctfdcm

./: .ci-mgmt.yaml  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  LICENSE  Makefile  README.md  SECURITY.md
.github/actions/download-bin/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  codeql-analysis.yaml  lint.yaml  prerequisites.yml  publish.yml  release.yaml  resync-build.yml  scoreboard.yaml  test.yml
docs/: _index.md  installation-configuration.md
examples/: examples_go_test.go  examples_test.go  go.mod  go.sum
examples/basic-go/: Pulumi.yaml  go.mod  go.sum  main.go
provider/: go.mod  go.sum  resources.go
sdk/: go.mod  go.sum
sdk/dotnet/: CTFerio.Ctfdcm.csproj  ChallengeDynamicIaC.cs  GetChallengesDynamiciac.cs  Instance.cs  Provider.cs  Pulumi.Ctfdcm.csproj  Pulumi.yaml  Utilities.cs
sdk/go/: Pulumi.yaml
sdk/nodejs/: Pulumi.yaml  README.md  challengeDynamicIaC.ts  getChallengesDynamiciac.ts  index.ts  instance.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/ctfer-io_pulumi-ctfdcm/: README.md  challenge_dynamic_ia_c.py  instance.py
sdk/python/ctfer_io_pulumi_ctfdcm/: __init__.py  challenge_dynamic_ia_c.py  instance.py  provider.py
sdk/python/ctfer_io_pulumi_ctfdcm/config/: __init__.pyi  vars.py
sdk/python/ctferio_ctfdcm/: __init__.py  challenge_dynamic_ia_c.py  pulumi-plugin.json
sdk/python/pulumi_ctfdcm/: __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_ctfdcm/config/: vars.py
(+26 files in other folders)
