[project]
  name = "pulumi_ctfdcm"
  description = "The CTFd-Chall-Manager provider for Pulumi, to manage its resources as code."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "ctfd", "chall-manager", "category/utility"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://ctfer.io"
    Repository = "https://github.com/ctfer-io/pulumi-ctfdcm"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_ctfdcm = ["py.typed", "pulumi-plugin.json"]
